<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivMosque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_mosque" />
                        <TextView
                            android:layout_toEndOf="@id/ivMosque"
                            android:id="@+id/tvTimezone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Timezone Asia" />
                        <TextView
                            android:layout_toEndOf="@id/ivMosque"
                            android:id="@+id/tvCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvTimezone"
                            tools:text="Country Indonesia" />
                        <TextView
                            android:layout_toEndOf="@id/ivMosque"
                            android:id="@+id/tvCity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvCountry"
                            tools:text="City Jakarta" />
                        <TextView
                            android:layout_toEndOf="@id/ivMosque"
                            android:layout_below="@id/tvCity"
                            android:id="@+id/tvGregorian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Date 2021-12-08" />
                        <TextView
                            android:layout_toEndOf="@id/ivMosque"
                            android:layout_below="@id/tvGregorian"
                            android:id="@+id/tvHijri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Hijri 2021-12-08" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleImsak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/imsak" />
                        <TextView
                            android:id="@+id/tvImsak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleSunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise" />
                        <TextView
                            android:id="@+id/tvSunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleFajr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fajr" />
                        <TextView
                            android:id="@+id/tvFajr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleDhuhr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dhuhr" />
                        <TextView
                            android:id="@+id/tvDhuhr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleAsr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/asr" />
                        <TextView
                            android:id="@+id/tvAsr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleMaghrib"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maghrib" />
                        <TextView
                            android:id="@+id/tvMaghrib"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="4dp"
                    android:layout_margin="8dp"
                    app:contentPadding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTitleIsha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/isha" />
                        <TextView
                            android:id="@+id/tvIsha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:text="@string/time"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/pgBar"/>
</RelativeLayout>